syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.salesfoce.apollo.state.proto";
option java_outer_classname = "CdcProto";
option objc_class_prefix = "Cdc";
import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";

package apollo.cdc;

message Batch{
    repeated string statements = 1;
}

message Arguments {
    repeated bytes args = 1;
}

message Statement {
    string sql = 1;
    Arguments arguments = 2;
}

message Call {
    string sql = 1;
    Arguments arguments = 2;
    repeated int32 outParameters = 3; // value is enum of java.sql.SQLType
}

message BatchedTransaction {
    repeated Txn transactions = 1;
}

message BatchUpdate {
    string sql = 1;
    repeated Arguments batch = 2;
}

message Txn {
    oneof execution {
        Statement statement = 1;
        Call call = 2;
        Batch batch = 3;
        BatchUpdate batchUpdate = 4;
    }
}